Completed 1st round of desktop version

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -2,7 +2,8 @@
 $breakpoints: (phone: 780px, tablet: 1024px, desktop: 1025px);
 
 // Colors
-$darkGreen: #00491e;
+$backgroundGreen: #00491e;
+$darkGreen: #1c3315;
 $lightGreen: #85c582;
 
 // Font Sizes
