--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -12,17 +12,145 @@ section {
 		visibility: hidden;
 		border: 1px black solid;
 
+		// display: flex;
+		// flex-direction: row;
+		// flex-wrap: wrap;
+		// justify-content: space-between;
+		// align-items: stretch;
+
+		background-image: url(images/background_dt_2x.png);
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-position: center center;
+
 		@include media(">=desktop") {
+			background-image: url(images/background_dt_2x.png);
 			border: 5px red solid;
 			min-height: 400px;
 		}
 		@include media("<=tablet") {
+			background-image: url(images/background_dt_2x.png);
 			border: 5px white solid;
 			min-height: 650px;
 		}
 		@include media("<=phone") {
+			background-image: url(images/background_mo_2x.png);
 			border: 5px blue solid;
 			min-height: 100vh;
+		}
+		@include media(">=desktop") {}
+		@include media("<=tablet") {}
+		@include media("<=phone") {}
+
+		.pic-container {
+			position: absolute;
+			max-width: 900px;
+
+			img#pic {
+				clip-path:url(#wave-mask);
+				position: absolute;
+				top: 0;
+				@include media(">=desktop") {
+					height: 100%;
+				}
+				@include media("<=tablet") {}
+				@include media("<=phone") {}
+			}
+		}
+
+		.lockup-container {
+			position: absolute;
+			right: 0;
+			max-width: 660px;
+			width: clamp(50%, 1vw, 60%);
+			color: white;
+			text-align: center;
+			// border: 2px dotted red;
+
+			& * span {
+					display: inline;
+			} 
+
+			#logo-wrapper {
+				// position: relative;
+				margin: 2em auto 0.5em;
+
+				@include media(">=desktop") {
+					width: 64%;
+				}
+				@include media("<=tablet") {
+
+				}
+				@include media("<=phone") {
+
+				}
+			}
+
+			h1 {
+				font: {
+					family: cabrito-normal, sans-serif; // family: soleil, sans-serif;
+					weight: 700;
+					style: normal;
+					size: clamp(20px, 2vw, $font-dt);
+				}
+				@include media(">=desktop") {
+					margin-bottom: 0.4em;
+				}
+				@include media("<=tablet") {}
+				@include media("<=phone") {}
+			}
+
+			p#txt {
+				max-width: 80%;
+				margin: 0 auto 1rem;
+				font: {
+					family: cabrito-normal, sans-serif; // family: soleil, sans-serif;
+					weight: 400;
+					style: normal;
+				}
+
+				// span {
+				// 	display: inline;
+				// }
+
+				@include media(">=desktop") {
+					// position: absolute;
+					font-size: clamp(15px, 2vw, 19px);
+					margin-bottom: 1.5em;
+					max-width: 68%;//25rem;
+					// right: 3%;//80px;
+					// top: 50px;
+				}
+				@include media("<=tablet") {
+				  // font-size: clamp(24px, 3vw, $font-tab);
+				}
+				@include media("<=phone") {
+				  // font-size: clamp(13px, 4vw, $font-m);
+				}
+			}
+			button.cta {
+				background-color: white;
+				border-radius: 1em;
+				border: 0;
+				color: $darkGreen;
+				font: {
+					family: cabrito-normal, sans-serif; // family: soleil, sans-serif;
+					weight: 700;
+					style: normal;
+				}
+				padding: 5px 1rem;
+				margin: 0 auto;
+
+				@include media(">=desktop") {
+					font-size: 1em;
+				}
+				@include media("<=tablet") {
+					font-size: 1em;
+				}
+				@include media("<=phone") {
+					font-size: 1em;
+				}
+			}
 		}
 
 		/* img.wave {
