Creative edits to animation and timing for all sizes. Combined repeated animations into partial timeline functions.

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -3,7 +3,7 @@ $breakpoints: (phone: 780px, tablet: 1024px, desktop: 1025px);
 
 // Colors
 $backgroundGreen: #00491e;
-$darkGreen: #1c3315;
+$darkGreen: #005F30;
 $lightGreen: #85c582;
 
 // Font Sizes
