--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -199,7 +199,7 @@ section {
 
 				p#txt {
 					max-width: 80%;
-					margin: 0 auto 1rem;
+					margin: 0 auto clamp(2em, 5vh, 5rem);
 					font: {
 						family: cabrito-normal, sans-serif; // family: soleil, sans-serif;
 						weight: 400;
@@ -231,7 +231,7 @@ section {
 						weight: 700;
 						style: normal;
 					}
-					padding: 5px 1rem;
+					padding: 0.2em 1em;
 					margin: 0 auto;
 
 					@include media(">=desktop") {
@@ -241,7 +241,7 @@ section {
 						font-size: 1.15em;
 					}
 					@include media("<=phone") {
-						font-size: 1em;
+						font-size: clamp(15px, 4vw, 32px);
 					}
 				}
 			}
