(Bug) Fixed SVG clipping/masking bugs breaks on window resize.

--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -53,6 +53,7 @@ section {
 				width: 100%;
 			}
 			svg#wave-dt {
+				// overflow: visible;
 				@include media(">=desktop") {
 					display: block; 
 					bottom: 0;
