Added pointer to CTA button

--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -205,6 +205,7 @@ section {
 					border-radius: 1em;
 					border: 0;
 					color: $darkGreen;
+					cursor: pointer;
 					font: {
 						family: cabrito-normal, sans-serif;
 						weight: 700;
