--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -11,7 +11,7 @@ section {
 		overflow: hidden;
 		visibility: hidden;
 		border: 1px black solid;
-		cursor: pointer;
+		// cursor: pointer;
 
 		background-image: url(images/background_dt_2x.png);
 		background-size: cover;
@@ -161,7 +161,7 @@ section {
 
 				h1 {
 					font: {
-						family: cabrito-normal, sans-serif; // family: soleil, sans-serif;
+						family: cabrito-normal, sans-serif;
 						weight: 700;
 						style: normal;
 					}
@@ -183,7 +183,7 @@ section {
 					max-width: 80%;
 					margin: 0 auto clamp(2em, 5vh, 5rem);
 					font: {
-						family: cabrito-normal, sans-serif; // family: soleil, sans-serif;
+						family: cabrito-normal, sans-serif;
 						weight: 400;
 						style: normal;
 					}
@@ -205,7 +205,7 @@ section {
 					border-radius: 1em;
 					border: 0;
 					color: $darkGreen;
-					cursor: pointer;
+					// cursor: pointer;
 					font: {
 						family: cabrito-normal, sans-serif;
 						weight: 700;
